--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,30 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5.    5.5  12.   26.    6.7   6.9    nan  9.95 22.   27.   32.   20.\n",
-      "  9.    7.   15.    9.5   8.    6.    9.75 10.    8.75 13.    6.5   4.75\n",
-      " 11.    4.    4.5   3.5   7.5  18.   14.    8.5  19.   25.   28.   36.\n",
-      " 17.5  24.   29.5  33.   19.5  39.   38.5  37.   22.25 21.   17.   16.5\n",
-      " 28.5  27.3  34.5  23.   34.   18.9  18.5  15.4  20.5  43.   27.5  26.5\n",
-      " 25.5  65.   45.   43.5  22.5  32.5  36.5  39.5  40.   23.5  29.   77.\n",
-      " 44.   75.   42.   30.   38.   16.   31.   35.   49.   50.   55.   52.\n",
-      " 19.99 46.99 10.49 30.96 11.99 13.99  7.99 14.99 20.99 14.49  3.99 10.29\n",
-      "  8.99  9.99 21.99  4.99 15.99 12.99 28.96 23.49  6.99 13.49 16.49 15.49\n",
-      " 51.   11.49 10.99 11.29  8.29 20.49 17.99 22.99 27.49 14.79 18.29 25.99\n",
-      " 29.99 12.49 18.49 16.99 18.99  9.49 26.99 17.29 18.79 24.49 15.79  4.79\n",
-      "  4.49  6.49  5.99 56.49  1.99 60.    7.49  7.29  9.29  8.96  5.49 27.96\n",
-      "  9.39 21.5   7.79 19.29  2.99 22.49 13.96 11.79  3.49 10.79 13.79  9.79\n",
-      " 13.29]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -64,11 +43,17 @@
     "df = df.drop(columns=[\"currency\"])\n",
     "\n",
     "# df.head()\n",
-    "df.shape\n",
+    "# df.shape\n",
     "\n",
-    "unique_ratings = df[\"price\"].unique()\n",
-    "print(unique_ratings)\n",
-    "df.to_json(\"updated_products.json\", orient=\"records\", indent=4)\n"
+    "# unique_ratings = df[\"price\"].unique()\n",
+    "# print(unique_ratings)\n",
+    "df.to_json(\"updated_products.json\", orient=\"records\", indent=4)\n",
+    "\n",
+    "with open(\"updated_products.json\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    json_data = file.read().replace(\"\\\\/\", \"/\")\n",
+    "\n",
+    "with open(\"updated_products.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    file.write(json_data)\n"
    ]
   },
   {
@@ -537,26 +522,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                  name            brand  \\\n",
-      "587                        Sante Soft Cream Foundation            sante   \n",
-      "685  Pacifica Radiant Shimmer Highlighting Creams F...         pacifica   \n",
-      "724                        Sante Kajal Eyeliner Pencil            sante   \n",
-      "543                              Cargo Cosmetics Blush  cargo cosmetics   \n",
-      "580             Sante Lip Duo Contour and Gloss Pencil            sante   \n",
-      "\n",
-      "    category  price  \n",
-      "587    cream  27.49  \n",
-      "685   powder  28.00  \n",
-      "724   pencil  17.29  \n",
-      "543   powder  26.00  \n",
-      "580     None  20.49  \n"
+      "                                 name brand  category  price\n",
+      "169  In Your Element Lipstick - Water   nyx  lipstick    9.0\n",
+      "180                Plush Gel Lipstick   nyx  lipstick    7.0\n",
+      "159      Luv Out Loud Liquid Lipstick   nyx  lipstick    7.0\n",
+      "162              Simply Red Lip Cream   nyx  lipstick    6.5\n",
+      "195              Soft Matte Lip Cream   nyx  lipstick    6.5\n"
      ]
     }
    ],
@@ -584,7 +562,7 @@
     "    return recommended_products[[\"name\", \"brand\", \"category\", \"price\"]]\n",
     "\n",
     "# Example usage\n",
-    "product_to_recommend = \"Sante Rouge\"\n",
+    "product_to_recommend = \"Pro Lip Cream Palette\"\n",
     "recommendations = recommend_products(product_to_recommend, df, nn_model, preprocessor)\n",
     "print(recommendations)\n"
    ]
