--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,235 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>name</th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_sign</th>\n",
-       "      <th>image_link</th>\n",
-       "      <th>product_link</th>\n",
-       "      <th>website_link</th>\n",
-       "      <th>description</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>category</th>\n",
-       "      <th>product_type</th>\n",
-       "      <th>tag_list</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>updated_at</th>\n",
-       "      <th>product_api_url</th>\n",
-       "      <th>api_featured_image</th>\n",
-       "      <th>product_colors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1048</td>\n",
-       "      <td>colourpop</td>\n",
-       "      <td>Lippie Pencil</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>$</td>\n",
-       "      <td>https://cdn.shopify.com/s/files/1/1338/0845/co...</td>\n",
-       "      <td>https://colourpop.com/collections/lippie-pencil</td>\n",
-       "      <td>https://colourpop.com</td>\n",
-       "      <td>Lippie Pencil A long-wearing and high-intensit...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>pencil</td>\n",
-       "      <td>lip_liner</td>\n",
-       "      <td>[cruelty free, Vegan]</td>\n",
-       "      <td>2018-07-08 23:45:08.056000+00:00</td>\n",
-       "      <td>2018-07-09 00:53:23.301000+00:00</td>\n",
-       "      <td>https://makeup-api.herokuapp.com/api/v1/produc...</td>\n",
-       "      <td>//s3.amazonaws.com/donovanbailey/products/api_...</td>\n",
-       "      <td>[{'hex_value': '#B28378', 'colour_name': 'BFF ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1047</td>\n",
-       "      <td>colourpop</td>\n",
-       "      <td>Blotted Lip</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>$</td>\n",
-       "      <td>https://cdn.shopify.com/s/files/1/1338/0845/pr...</td>\n",
-       "      <td>https://colourpop.com/collections/lippie-stix?...</td>\n",
-       "      <td>https://colourpop.com</td>\n",
-       "      <td>Blotted Lip Sheer matte lipstick that creates ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>[cruelty free, Vegan]</td>\n",
-       "      <td>2018-07-08 22:01:20.178000+00:00</td>\n",
-       "      <td>2018-07-09 00:53:23.287000+00:00</td>\n",
-       "      <td>https://makeup-api.herokuapp.com/api/v1/produc...</td>\n",
-       "      <td>//s3.amazonaws.com/donovanbailey/products/api_...</td>\n",
-       "      <td>[{'hex_value': '#b72227', 'colour_name': 'Bee'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1046</td>\n",
-       "      <td>colourpop</td>\n",
-       "      <td>Lippie Stix</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>$</td>\n",
-       "      <td>https://cdn.shopify.com/s/files/1/1338/0845/co...</td>\n",
-       "      <td>https://colourpop.com/collections/lippie-stix</td>\n",
-       "      <td>https://colourpop.com</td>\n",
-       "      <td>Lippie Stix Formula contains Vitamin E, Mango,...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>[cruelty free, Vegan]</td>\n",
-       "      <td>2018-07-08 21:47:49.858000+00:00</td>\n",
-       "      <td>2018-07-09 00:53:23.274000+00:00</td>\n",
-       "      <td>https://makeup-api.herokuapp.com/api/v1/produc...</td>\n",
-       "      <td>//s3.amazonaws.com/donovanbailey/products/api_...</td>\n",
-       "      <td>[{'hex_value': '#F2DEC3', 'colour_name': 'Fair...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1045</td>\n",
-       "      <td>colourpop</td>\n",
-       "      <td>No Filter Foundation</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>$</td>\n",
-       "      <td>https://cdn.shopify.com/s/files/1/1338/0845/pr...</td>\n",
-       "      <td>https://colourpop.com/products/no-filter-matte...</td>\n",
-       "      <td>https://colourpop.com/products/no-filter-matte...</td>\n",
-       "      <td>Developed for the Selfie Age, our buildable fu...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>liquid</td>\n",
-       "      <td>foundation</td>\n",
-       "      <td>[cruelty free, Vegan]</td>\n",
-       "      <td>2018-07-08 18:22:25.273000+00:00</td>\n",
-       "      <td>2018-07-09 00:53:23.313000+00:00</td>\n",
-       "      <td>https://makeup-api.herokuapp.com/api/v1/produc...</td>\n",
-       "      <td>//s3.amazonaws.com/donovanbailey/products/api_...</td>\n",
-       "      <td>[{'hex_value': '#F2DEC3', 'colour_name': 'Fair...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1044</td>\n",
-       "      <td>boosh</td>\n",
-       "      <td>Lipstick</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>$</td>\n",
-       "      <td>https://cdn.shopify.com/s/files/1/1016/3243/pr...</td>\n",
-       "      <td>https://www.boosh.ca/collections/all</td>\n",
-       "      <td>https://www.boosh.ca/</td>\n",
-       "      <td>All of our products are free from lead and hea...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>lipstick</td>\n",
-       "      <td>[Chemical Free, Organic]</td>\n",
-       "      <td>2018-07-08 17:32:28.088000+00:00</td>\n",
-       "      <td>2018-09-02 22:52:06.669000+00:00</td>\n",
-       "      <td>https://makeup-api.herokuapp.com/api/v1/produc...</td>\n",
-       "      <td>//s3.amazonaws.com/donovanbailey/products/api_...</td>\n",
-       "      <td>[{'hex_value': '#CB4975', 'colour_name': 'Babs...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     id      brand                  name  price price_sign  \\\n",
-       "0  1048  colourpop         Lippie Pencil    5.0          $   \n",
-       "1  1047  colourpop           Blotted Lip    5.5          $   \n",
-       "2  1046  colourpop           Lippie Stix    5.5          $   \n",
-       "3  1045  colourpop  No Filter Foundation   12.0          $   \n",
-       "4  1044      boosh              Lipstick   26.0          $   \n",
-       "\n",
-       "                                          image_link  \\\n",
-       "0  https://cdn.shopify.com/s/files/1/1338/0845/co...   \n",
-       "1  https://cdn.shopify.com/s/files/1/1338/0845/pr...   \n",
-       "2  https://cdn.shopify.com/s/files/1/1338/0845/co...   \n",
-       "3  https://cdn.shopify.com/s/files/1/1338/0845/pr...   \n",
-       "4  https://cdn.shopify.com/s/files/1/1016/3243/pr...   \n",
-       "\n",
-       "                                        product_link  \\\n",
-       "0    https://colourpop.com/collections/lippie-pencil   \n",
-       "1  https://colourpop.com/collections/lippie-stix?...   \n",
-       "2      https://colourpop.com/collections/lippie-stix   \n",
-       "3  https://colourpop.com/products/no-filter-matte...   \n",
-       "4               https://www.boosh.ca/collections/all   \n",
-       "\n",
-       "                                        website_link  \\\n",
-       "0                              https://colourpop.com   \n",
-       "1                              https://colourpop.com   \n",
-       "2                              https://colourpop.com   \n",
-       "3  https://colourpop.com/products/no-filter-matte...   \n",
-       "4                              https://www.boosh.ca/   \n",
-       "\n",
-       "                                         description  rating  category  \\\n",
-       "0  Lippie Pencil A long-wearing and high-intensit...       1    pencil   \n",
-       "1  Blotted Lip Sheer matte lipstick that creates ...       1  lipstick   \n",
-       "2  Lippie Stix Formula contains Vitamin E, Mango,...       4  lipstick   \n",
-       "3  Developed for the Selfie Age, our buildable fu...       3    liquid   \n",
-       "4  All of our products are free from lead and hea...       5  lipstick   \n",
-       "\n",
-       "  product_type                  tag_list                       created_at  \\\n",
-       "0    lip_liner     [cruelty free, Vegan] 2018-07-08 23:45:08.056000+00:00   \n",
-       "1     lipstick     [cruelty free, Vegan] 2018-07-08 22:01:20.178000+00:00   \n",
-       "2     lipstick     [cruelty free, Vegan] 2018-07-08 21:47:49.858000+00:00   \n",
-       "3   foundation     [cruelty free, Vegan] 2018-07-08 18:22:25.273000+00:00   \n",
-       "4     lipstick  [Chemical Free, Organic] 2018-07-08 17:32:28.088000+00:00   \n",
-       "\n",
-       "                        updated_at  \\\n",
-       "0 2018-07-09 00:53:23.301000+00:00   \n",
-       "1 2018-07-09 00:53:23.287000+00:00   \n",
-       "2 2018-07-09 00:53:23.274000+00:00   \n",
-       "3 2018-07-09 00:53:23.313000+00:00   \n",
-       "4 2018-09-02 22:52:06.669000+00:00   \n",
-       "\n",
-       "                                     product_api_url  \\\n",
-       "0  https://makeup-api.herokuapp.com/api/v1/produc...   \n",
-       "1  https://makeup-api.herokuapp.com/api/v1/produc...   \n",
-       "2  https://makeup-api.herokuapp.com/api/v1/produc...   \n",
-       "3  https://makeup-api.herokuapp.com/api/v1/produc...   \n",
-       "4  https://makeup-api.herokuapp.com/api/v1/produc...   \n",
-       "\n",
-       "                                  api_featured_image  \\\n",
-       "0  //s3.amazonaws.com/donovanbailey/products/api_...   \n",
-       "1  //s3.amazonaws.com/donovanbailey/products/api_...   \n",
-       "2  //s3.amazonaws.com/donovanbailey/products/api_...   \n",
-       "3  //s3.amazonaws.com/donovanbailey/products/api_...   \n",
-       "4  //s3.amazonaws.com/donovanbailey/products/api_...   \n",
-       "\n",
-       "                                      product_colors  \n",
-       "0  [{'hex_value': '#B28378', 'colour_name': 'BFF ...  \n",
-       "1  [{'hex_value': '#b72227', 'colour_name': 'Bee'...  \n",
-       "2  [{'hex_value': '#F2DEC3', 'colour_name': 'Fair...  \n",
-       "3  [{'hex_value': '#F2DEC3', 'colour_name': 'Fair...  \n",
-       "4  [{'hex_value': '#CB4975', 'colour_name': 'Babs...  "
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.    5.5  12.   26.    6.7   6.9    nan  9.95 22.   27.   32.   20.\n",
+      "  9.    7.   15.    9.5   8.    6.    9.75 10.    8.75 13.    6.5   4.75\n",
+      " 11.    4.    4.5   3.5   7.5  18.   14.    8.5  19.   25.   28.   36.\n",
+      " 17.5  24.   29.5  33.   19.5  39.   38.5  37.   22.25 21.   17.   16.5\n",
+      " 28.5  27.3  34.5  23.   34.   18.9  18.5  15.4  20.5  43.   27.5  26.5\n",
+      " 25.5  65.   45.   43.5  22.5  32.5  36.5  39.5  40.   23.5  29.   77.\n",
+      " 44.   75.   42.   30.   38.   16.   31.   35.   49.   50.   55.   52.\n",
+      " 19.99 46.99 10.49 30.96 11.99 13.99  7.99 14.99 20.99 14.49  3.99 10.29\n",
+      "  8.99  9.99 21.99  4.99 15.99 12.99 28.96 23.49  6.99 13.49 16.49 15.49\n",
+      " 51.   11.49 10.99 11.29  8.29 20.49 17.99 22.99 27.49 14.79 18.29 25.99\n",
+      " 29.99 12.49 18.49 16.99 18.99  9.49 26.99 17.29 18.79 24.49 15.79  4.79\n",
+      "  4.49  6.49  5.99 56.49  1.99 60.    7.49  7.29  9.29  8.96  5.49 27.96\n",
+      "  9.39 21.5   7.79 19.29  2.99 22.49 13.96 11.79  3.49 10.79 13.79  9.79\n",
+      " 13.29]\n"
+     ]
     }
    ],
    "source": [
@@ -274,15 +67,15 @@
     "df.head()\n",
     "# df.shape\n",
     "\n",
-    "# unique_ratings = df[\"price\"].unique()\n",
-    "# print(unique_ratings)\n",
-    "# df.to_json(\"updated_products.json\", orient=\"records\", indent=4)\n",
+    "unique_ratings = df[\"price\"].unique()\n",
+    "print(unique_ratings)\n",
+    "df.to_json(\"updated_products.json\", orient=\"records\", indent=4)\n",
     "\n",
-    "# with open(\"updated_products.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "#     json_data = file.read().replace(\"\\\\/\", \"/\")\n",
+    "with open(\"updated_products.json\", \"r\", encoding=\"utf-8\") as file:\n",
+    "    json_data = file.read().replace(\"\\\\/\", \"/\")\n",
     "\n",
-    "# with open(\"updated_products.json\", \"w\", encoding=\"utf-8\") as file:\n",
-    "#     file.write(json_data)"
+    "with open(\"updated_products.json\", \"w\", encoding=\"utf-8\") as file:\n",
+    "    file.write(json_data)"
    ]
   },
   {
