--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.    5.5  12.   26.    6.7   6.9    nan  9.95 22.   27.   32.   20.\n",
+      "[ 5.    5.5  12.   26.    6.7   6.9   1.    9.95 22.   27.   32.   20.\n",
       "  9.    7.   15.    9.5   8.    6.    9.75 10.    8.75 13.    6.5   4.75\n",
       " 11.    4.    4.5   3.5   7.5  18.   14.    8.5  19.   25.   28.   36.\n",
       " 17.5  24.   29.5  33.   19.5  39.   38.5  37.   22.25 21.   17.   16.5\n",
@@ -40,6 +40,9 @@
     "# Replace null values in \"rating\" with random integers from 1 to 5\n",
     "df[\"rating\"] = df[\"rating\"].apply(lambda x: np.random.randint(1, 6) if pd.isnull(x) else int(x))\n",
     "\n",
+    "# Convert \"price\" to numeric, forcing errors to NaN \n",
+    "df[\"price\"] = pd.to_numeric(df[\"price\"], errors=\"coerce\")\n",
+    "\n",
     "# Replace NaN values in \"price\" with the median price of the same category and brand\n",
     "df[\"price\"] = df.apply(\n",
     "    lambda row: df[\n",
@@ -49,6 +52,13 @@
     "    ][\"price\"].median() if pd.isna(row[\"price\"]) or row[\"price\"] == 0 else row[\"price\"], \n",
     "    axis=1\n",
     ")\n",
+    "\n",
+    "# If any prices are still NaN (no median available), replace them with a default value (e.g., 1.0) \n",
+    "df[\"price\"] = df[\"price\"].fillna(1.0)\n",
+    "\n",
+    "# Ensure all prices are greater than zero \n",
+    "df[\"price\"] = df[\"price\"].apply(lambda x: max(x, 1.0))\n",
+    "\n",
     "\n",
     "# Clean the category column\n",
     "default_category = \"unknown\"\n",
