--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.    5.5  12.   26.    6.7   6.9   1.    9.95 22.   27.   32.   20.\n",
-      "  9.    7.   15.    9.5   8.    6.    9.75 10.    8.75 13.    6.5   4.75\n",
-      " 11.    4.    4.5   3.5   7.5  18.   14.    8.5  19.   25.   28.   36.\n",
-      " 17.5  24.   29.5  33.   19.5  39.   38.5  37.   22.25 21.   17.   16.5\n",
-      " 28.5  27.3  34.5  23.   34.   18.9  18.5  15.4  20.5  43.   27.5  26.5\n",
-      " 25.5  65.   45.   43.5  22.5  32.5  36.5  39.5  40.   23.5  29.   77.\n",
-      " 44.   75.   42.   30.   38.   16.   31.   35.   49.   50.   55.   52.\n",
-      " 19.99 46.99 10.49 30.96 11.99 13.99  7.99 14.99 20.99 14.49  3.99 10.29\n",
-      "  8.99  9.99 21.99  4.99 15.99 12.99 28.96 23.49  6.99 13.49 16.49 15.49\n",
-      " 51.   11.49 10.99 11.29  8.29 20.49 17.99 22.99 27.49 14.79 18.29 25.99\n",
-      " 29.99 12.49 18.49 16.99 18.99  9.49 26.99 17.29 18.79 24.49 15.79  4.79\n",
-      "  4.49  6.49  5.99 56.49  1.99 60.    7.49  7.29  9.29  8.96  5.49 27.96\n",
-      "  9.39 21.5   7.79 19.29  2.99 22.49 13.96 11.79  3.49 10.79 13.79  9.79\n",
-      " 13.29]\n"
+      "[ 5.    5.5  12.   26.    6.7   6.9  17.   30.   35.    7.   40.   47.\n",
+      " 38.    8.    6.   49.   14.   19.   31.   25.    9.   11.   36.   37.\n",
+      " 44.    9.95 22.   27.   32.   20.   15.    9.5   9.75 10.    8.75 13.\n",
+      "  6.5   4.75  4.    4.5   3.5   7.5  18.    8.5  28.   17.5  24.   29.5\n",
+      " 33.   19.5  39.   38.5  22.25 21.   16.5  28.5  27.3  34.5  23.   34.\n",
+      " 18.9  18.5  15.4  20.5  43.   27.5  26.5  25.5  65.   45.   43.5  22.5\n",
+      " 32.5  36.5  39.5  23.5  29.   77.   48.   50.    2.   16.   75.   42.\n",
+      " 55.   52.   19.99 46.99 10.49 30.96 11.99 13.99  7.99 14.99 20.99 14.49\n",
+      "  3.99 10.29  8.99  9.99 21.99  4.99 15.99 12.99 28.96 23.49  6.99 13.49\n",
+      " 16.49 15.49 51.   11.49 10.99 11.29  8.29 20.49 17.99 22.99 27.49 14.79\n",
+      " 18.29 25.99 29.99 12.49 18.49 16.99 18.99  9.49 26.99 17.29 18.79 24.49\n",
+      " 15.79  4.79  4.49  6.49  5.99 56.49  1.99 60.    7.49  7.29  9.29  8.96\n",
+      "  5.49 27.96  9.39 21.5   7.79 19.29  2.99 22.49 13.96 11.79  3.49 10.79\n",
+      " 13.79  9.79 13.29]\n"
      ]
     }
    ],
@@ -59,6 +59,8 @@
     "# Ensure all prices are greater than zero \n",
     "df[\"price\"] = df[\"price\"].apply(lambda x: max(x, 1.0))\n",
     "\n",
+    "# Replace prices with 1 with a random number between 2 and 50 \n",
+    "df[\"price\"] = df[\"price\"].apply(lambda x: np.random.randint(2, 51) if x == 1 else x)\n",
     "\n",
     "# Clean the category column\n",
     "default_category = \"unknown\"\n",
